--- a/src/html/partials/card-project.html
+++ b/src/html/partials/card-project.html
@@ -4,9 +4,9 @@
     </div>
     <div class="card-body">
         <div class="card-head">
-            <div class="row gy-3">
-                <div class="col-xl-5">
-                    <img class="img-fluid" src="@@logoURL">
+            <div class="row gy-2 gx-0">
+                <div class="col-xl-auto">
+                    <img class="project-logo img-fluid" src="@@logoURL">
                 </div>
                 <div class="col-xl">
                     <div class="card-tags">
