--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -15,3 +15,7 @@ a {
     --bs-link-color-rgb: 133, 142, 242;
     --bs-link-hover-color-rgb: var(--theme-blue-rgb);
 }
+
+.link-opacity-60 {
+    --bs-link-opacity: 0.6;
+}
