--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -69,7 +69,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                <div class="fs-14 text-white-blue mt-4">Нажимая кнопку отправить я даю своё согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности</div>
+                                <div class="fs-x-small text-white-blue mt-4">Нажимая кнопку отправить я даю своё согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности</div>
                             </div>
                         </div>
                     </div>
