--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -90,6 +90,7 @@
     &__copyright-bar {
         
         .copyright-text {
+            font-size: 13px;
 
             span {
                 display: inline-block;
@@ -121,6 +122,7 @@
         &__menu {
             .nav {
                 --bs-nav-link-padding-x: 0;
+                --bs-nav-link-font-size: 16px;
                 --bs-nav-link-color: rgba(var(--theme-black-rgb), 0.6);
             }
         }
@@ -194,6 +196,12 @@
         &__cta-bar {
             .cta-content {
                 grid-template-columns: 1fr 1fr 1fr;
+            }
+        }
+
+        &__copyright-bar {
+            .copyright-text {
+                font-size: 16px;
             }
         }
     }
