--- a/src/html/partials/card-blog.html
+++ b/src/html/partials/card-blog.html
@@ -7,7 +7,7 @@
     <div class="card-body">
         <div class="flex-grow-1">
             <div class="card-top">
-                <div class="card-author">
+                <div class="card-author fs-small">
                     <div class="card-avatar-wrapper">
                         <img src="@@authorAvatarURL" alt="...">
                     </div>
@@ -15,7 +15,7 @@
                         <a href="#">@@authorName</a>
                     </div>
                 </div>
-                <div class="card-date">
+                <div class="card-date fs-small">
                     <span>
                         <svg width="20" height="20">
                             <use xlink:href="img/sprite.svg#icon-calendar"></use>
@@ -24,10 +24,10 @@
                     <span>16.08.2025</span>
                 </div>
             </div>
-            <div class="h4 fw-medium mb-10">
+            <div class="card-title h4 fw-medium">
                 <a href="#">@@title</a>
             </div>
-            <div class="card-description fw-light text-gray mb-10">Рекомендуйте наши услуги по разработке, дизайну, интеграции, SEO, ведению контекстной рекламы своим клиентам, партнёрам, знакомым и получайте реальные деньги. Сотрудничаем с юридическими и физическими лицами.</div>
+            <div class="card-description h6 fw-light text-gray lh-body">Рекомендуйте наши услуги по разработке, дизайну, интеграции, SEO, ведению контекстной рекламы своим клиентам, партнёрам, знакомым и получайте реальные деньги. Сотрудничаем с юридическими и физическими лицами.</div>
             <div class="card-tags">
                 @@if (context.tag1) {<a href="#">@@tag1</a>}
                 @@if (context.tag2) {<a href="#">@@tag2</a>}
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="card-bottom">
-            <div class="card-views">
+            <div class="card-views fs-small lh-1">
                 <span>
                     <svg width="20" height="20">
                         <use xlink:href="img/sprite.svg#icon-eye"></use>
@@ -45,7 +45,7 @@
                 </span>
                 <span>166</span>
             </div>
-            <div class="card-read-time">
+            <div class="card-read-time fs-small lh-1">
                 <span>
                     <svg width="20" height="20">
                         <use xlink:href="img/sprite.svg#icon-timer"></use>
