--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -3,9 +3,12 @@
         <!-- footer__cta-bar -->
         <div class="footer__cta-bar">
             <div class="container-fluid">
-                <div class="rounded-3 p-15 py-20 p-lg-40 bg-blue-gradient position-relative overflow-hidden">
-                    <img class="bg-absolute-img img-fluid" src="img/footer/footer-bg-figure.png">
-                    <!-- grid -->
+                <div class="cta-wrapper">
+
+                    <!-- bg-absolute-img -->
+                    <img class="bg-absolute-img" src="img/footer/footer-bg-figure.png">
+
+                    <!-- cta-content -->
                     <div class="cta-content">
                         <div class="cta-content__logo">
                             <img class="img-fluid" src="img/footer/footer-cta-logo-001.svg" alt="AMD Media">
@@ -73,6 +76,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -80,7 +84,7 @@
         <!-- footer__main-bar -->
         <div class="footer__main-bar">
             <div class="container-fluid">
-                <div class="rounded-3 p-15 p-lg-40 py-lg-20 bg-white">
+                <div class="rounded-3 p-15 p-xl-40 p-xxl-50 bg-white">
                     <div class="row row-cols-1 row-cols-lg-3">
 
                         <div class="col">
@@ -355,7 +359,7 @@
         <!-- footer__copyright-bar -->
         <div class="footer__copyright-bar">
             <div class="container-fluid">
-                <div class="rounded-3 p-15 p-lg-40 py-lg-20 bg-white">
+                <div class="rounded-3 p-15 p-xl-20 bg-white">
                     <div class="copyright-text text-center text-gray"><span>2014–2025г. © ООО «АМД Медиа» /</span> <span>сайт не является публичной офертой 2025г. /</span> <span><a href="#">Политика конфиденциальности</a></span></div>
                 </div>
             </div>
