--- a/src/html/partials/card-review.html
+++ b/src/html/partials/card-review.html
@@ -1,15 +1,15 @@
 <div class="card card-review">
     <div class="card-body">
-        <div class="mb-30 mb-lg-40">
-            <div class="h4 fw-medium mb-20">@@title</div>
-            <div class="card-description h5 fw-light text-gray mb-0">
+        <div class="card-heading">
+            <div class="card-title h4 fw-medium">@@title</div>
+            <div class="card-description fw-light text-gray mb-0">
                 @@description
             </div>
         </div>
-        <div class="d-flex justify-content-between">
+        <div class="d-flex align-items-center justify-content-between">
             <div>
-                <div class="h4 fw-medium mb-2">@@author</div>
-                <div class="text-gray">@@job</div>
+                <div class="h4 fw-medium mb-1">@@author</div>
+                <div class="fs-small text-gray lh-sm">@@job</div>
             </div>
             <div>
                 <a href="#" class="btn btn-outline-black btn-l btn-animated">
