--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -16,6 +16,7 @@ $black: #100102;
 
 // fonts
 $font-family-sans-serif: "Inter", sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$line-height-base: 1.4;
 
 // body settings
 $body-color: #100102;
