--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -5,37 +5,54 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 15px;
-    padding: 20px 0;
+    padding-bottom: 20px;
 
     &__cta-bar {
 
+        .cta-wrapper {
+            position: relative;
+            overflow: hidden;
+            padding: 20px 15px;
+            border-radius: var(--bs-border-radius-lg);
+            background-image: var(--theme-blue-gradient);
+        }
+
         .bg-absolute-img {
             position: absolute;
-            top: -230px;
-            right: -40px;
+            top: 70px;
+            right: -250px;
+            width: 700px;
+            height: auto;
         }
 
         .cta-content {
             position: relative;
             display: grid;
             grid-template-columns: 1fr;
-            gap: 20px;
 
-            // &__logo {}
+            &__logo {
+                max-width: 210px;
+                margin-bottom: 40px;
+            }
 
             &__contacts {
                 --bs-link-color-rgb: var(--theme-white-rgb);
                 --bs-link-hover-color-rgb: var(--theme-black-rgb);
                 display: flex;
                 flex-direction: column;
+                margin-bottom: 40px;
 
-                // .contact-link {}
+                .contact-link {
+                    &.link-phone {
+                        margin-bottom: 10px;
+                    }
+                }
 
                 .contact-socials {
                     display: flex;
                     align-items: center;
                     gap: 10px;
-                    margin-top: 30px;
+                    margin-top: 20px;
 
                     .link-social {
                         transition: 0.3s ease;
@@ -47,7 +64,9 @@
                 }
             }
 
-            // &__form-title {}
+            &__form-title {
+                margin-bottom: 10px;
+            }
 
             &__form {
 
@@ -85,7 +104,37 @@
         }
     }
 
-    // &__main-bar {}
+    &__main-bar {
+        .footer-widget {
+            padding: 15px 0;
+
+            &__title {
+                margin-bottom: 8px;
+
+                .collapse-link {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+
+                    svg {
+                        transition: all 0.3s ease;
+                    }
+
+                    &:not(.collapsed) svg {
+                        transform: rotate(180deg);
+                    }
+                }
+            }
+
+            &__menu {
+                .nav {
+                    --bs-nav-link-padding-x: 0;
+                    --bs-nav-link-font-size: 16px;
+                    --bs-nav-link-color: rgba(var(--theme-black-rgb), 0.6);
+                }
+            }
+        }
+    }
     
     &__copyright-bar {
         
@@ -98,43 +147,16 @@
         }
     }
 
-    .footer-widget {
-        padding: 15px 0;
-
-        &__title {
-            margin-bottom: 8px;
-
-            .collapse-link {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-
-                svg {
-                    transition: all 0.3s ease;
-                }
-
-                &:not(.collapsed) svg {
-                    transform: rotate(180deg);
-                }
-            }
-        }
-
-        &__menu {
-            .nav {
-                --bs-nav-link-padding-x: 0;
-                --bs-nav-link-font-size: 16px;
-                --bs-nav-link-color: rgba(var(--theme-black-rgb), 0.6);
-            }
-        }
-    }
-
     // Максимальная ширина
 
     @include media-breakpoint-down(lg) {
-        .footer-widget {
-            &__title {
-                > *:not(.collapse-link) {
-                    display: none;
+
+        &__main-bar {
+            .footer-widget {
+                &__title {
+                    > *:not(.collapse-link) {
+                        display: none;
+                    }
                 }
             }
         }
@@ -144,32 +166,103 @@
 
     @include media-breakpoint-up(sm) {
         gap: 20px;
+
+        &__cta-bar {
+            .bg-absolute-img {
+                top: -40px;
+                right: -180px;
+            }
+        }
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(md) {
         &__cta-bar {
-            .cta-content {
-                grid-template-columns: 1fr minmax(100px, 200px) 1fr;
+            .cta-wrapper {
+                padding: 15px;
+            }
 
+            .bg-absolute-img {
+                top: -10px;
+                right: 7px;
+            }
+
+            .cta-content {
+                grid-template-columns: 260px auto 300px;
+    
                 &__logo {
-                    grid-row: 1 / 2;
+                    grid-row: 1 / 3;
                     grid-column: 1 / 2;
+                    margin-bottom: 15px;
                 }
     
                 &__contacts {
                     grid-row: 3 / 4;
                     grid-column: 1 / 2;
+                    justify-content: flex-end;
+                    margin-bottom: 0;
                 }
     
                 &__form-title {
                     grid-row: 2 / 3;
                     grid-column: 1 / 2;
+                    margin-bottom: 0;
                 }
     
                 &__form {
                     grid-row: 1 / 4;
                     grid-column: 3 / 4;
+                }
+            }
+        }
+    }
 
+    @include media-breakpoint-up(lg) {
+        &__cta-bar {
+            .bg-absolute-img {
+                top: -34px;
+                right: 46px;
+                width: 900px;
+            }
+        }
+
+        &__main-bar {
+            .footer-widget {
+                padding: 20px 0;
+    
+                &__title {
+                    .collapse-link {
+                        display: none;
+                    }
+                }
+    
+                .collapse {
+                    display: block !important;
+                }
+            }
+        }
+    }
+
+    @include media-breakpoint-up(xl) {
+        &__cta-bar {
+            .cta-wrapper {
+                padding: 40px;
+            }
+            
+            .bg-absolute-img {
+                top: -85px;
+                right: 100px;
+                width: 1100px;
+            }
+
+            .cta-content {
+                grid-template-columns: 460px auto 400px;
+
+                &__logo {
+                    max-width: 400px;
+                    margin-bottom: 0;
+                }
+
+                &__form {
                     .form-wrapper {
                         padding: 30px;
                     }
@@ -177,31 +270,34 @@
             }
         }
 
-        .footer-widget {
-            padding: 20px 0;
-
-            &__title {
-                .collapse-link {
-                    display: none;
-                }
-            }
-
-            .collapse {
-                display: block !important;
+        &__copyright-bar {
+            .copyright-text {
+                font-size: 16px;
             }
         }
     }
 
-    @include media-breakpoint-up(xl) {
-        &__cta-bar {
-            .cta-content {
-                grid-template-columns: 1fr 1fr 1fr;
-            }
-        }
+    @include media-breakpoint-up(xxl) {
+        gap: 30px;
+        padding-bottom: 30px;
 
-        &__copyright-bar {
-            .copyright-text {
-                font-size: 16px;
+        &__cta-bar {
+            .cta-wrapper {
+                padding: 30px 50px;
+            }
+
+            .bg-absolute-img {
+                top: -110px;
+                right: 140px;
+                width: 1250px;
+            }
+
+            .cta-content {
+                grid-template-columns: 630px auto 480px;
+
+                &__logo {
+                    margin-bottom: 15px;
+                }
             }
         }
     }
