--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -54,65 +54,55 @@ body {
     background-image: var(--theme-red-gradient);
 }
 
+// paddings
+
 .p-15 {
     padding: 15px !important;
 }
 
-.p-20 {
-    padding: 20px !important;
-}
-
-.p-40 {
-    padding: 40px !important;
-}
-
-.py-20 {
-    padding-top: 20px !important;
-    padding-bottom: 20px !important;
-}
+// margins
 
 .mb-10 {
     margin-bottom: 10px !important;
 }
 
-.mb-15 {
-    margin-bottom: 15px !important;
-}
-
-.mb-20 {
-    margin-bottom: 20px !important;
-}
-
-.mb-30 {
-    margin-bottom: 30px !important;
-}
+// gaps
 
 .gap-10 {
     gap: 10px !important;
 }
 
-@include media-breakpoint-up(lg) {
+.gap-20 {
+    gap: 20px !important;
+}
 
-    .p-lg-20 {
+// Максимальная ширина
+
+@include media-breakpoint-down(xl) {
+    .hide-on-mobile {
+        display: none !important;
+    }
+}
+
+// Минимальная ширина
+
+@include media-breakpoint-up(xl) {
+    .p-xl-20 {
         padding: 20px !important;
     }
 
-    .p-lg-40 {
+    .p-xl-40 {
         padding: 40px !important;
     }
+}
 
-    .py-lg-20 {
-        padding-top: 20px !important;
-        padding-bottom: 20px !important;
-    }
-
-    .mb-lg-40 {
-        margin-bottom: 40px !important;
+@include media-breakpoint-up(xxl) {
+    .p-xxl-50 {
+        padding: 50px !important;
     }
 }
 
 @media (min-width: 1920px) {
-
     .container,
     .container-fluid,
     .container-lg,
