--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -274,6 +274,7 @@
 
         &__grid {
             grid-template-columns: 1fr;
+            gap: 30px;
         }
     }
 }
@@ -306,6 +307,14 @@
 
         &__heading {
             max-width: 615px;
+        }
+
+        &__title {
+            margin-bottom: 4px;
+        }
+
+        &__subtitle {
+            margin-bottom: 0;
         }
 
         &__form {
@@ -344,7 +353,6 @@
         }
 
         &__socials {
-
             .content-divider {
                 width: 100%;
                 height: 1px;
@@ -375,21 +383,10 @@
     }
 
     @include media-breakpoint-up(sm) {
-
-        // .bg-absolute-img {}
-
         .cta-content {
-
             &__socials {
-
-                .content-divider {
-                    margin-bottom: 40px;
-                }
-
                 .content-wrapper {
-                    // flex-direction: row;
-                    // align-items: center;
-                    gap: 12px;
+                    gap: 10px;
                 }
             }
         }
@@ -413,12 +410,12 @@
 
         .bg-absolute-img {
             top: -30px;
-            left: 345px;
+            left: 133px;
             width: 800px;
         }
 
         .cta-content {
-            grid-template-columns: 1fr minmax(100px, 200px) 1fr;
+            grid-template-columns: 325px auto 308px;
 
             &__heading {
                 grid-row: 1 / 3;
@@ -431,7 +428,7 @@
                 margin-top: 0;
 
                 .form-wrapper {
-                    padding: 30px;
+                    padding: 30px 15px;
                 }
             }
 
@@ -439,15 +436,14 @@
                 grid-row: 3 / 4;
                 grid-column: 1 / 2;
 
-                .content-wrapper {
-                    max-width: 500px;
-                    gap: 15px;
+                .content-divider {
+                    margin-top: 40px;
+                    margin-bottom: 40px;
                 }
 
-                .contact-socials {
-                    .link-social svg {
-                        width: 60px;
-                    }
+                .content-wrapper {
+                    max-width: 500px;
+                    gap: 10px;
                 }
             }
         }
@@ -467,7 +463,38 @@
         }
 
         .cta-content {
-            grid-template-columns: 600px auto 400px;
+            grid-template-columns: 525px auto 400px;
+            
+            &__heading {
+                max-width: 500px;
+            }
+
+            &__title {
+                margin-bottom: 10px;
+            }
+
+            &__form {
+                .form-wrapper {
+                    padding: 30px;
+                }
+            }
+
+            &__socials {
+                .content-divider {
+                    margin-top: 40px;
+                    margin-bottom: 70px;
+                }
+
+                .content-wrapper {
+                    gap: 15px;
+                }
+
+                .contact-socials {
+                    .link-social svg {
+                        width: 60px;
+                    }
+                }
+            }
         }
     }
 
@@ -485,7 +512,17 @@
         }
 
         .cta-content {
-            grid-template-columns: 600px auto 480px;
+            grid-template-columns: 580px auto 480px;
+
+            &__heading {
+                max-width: 100%;
+            }
+
+            &__form {
+                .form-wrapper {
+                    padding: 40px;
+                }
+            }
 
             &__socials {
                 .content-wrapper {
@@ -499,12 +536,22 @@
 /* section-tariffs */
 
 .section-tariffs {
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 
-    .section-grid {
+    &__heading {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    &__grid {
         display: grid;
         grid-template-columns: 1fr;
         gap: 30px;
+    }
+
+    &__btn-wrp {
+        margin-top: 15px;
     }
 
     @include media-breakpoint-up(md) {
@@ -512,45 +559,109 @@
     }
 
     @include media-breakpoint-up(lg) {
-        .section-grid {
+        &__heading {
+            margin-bottom: 20px;
+        }
+
+        &__grid {
             grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
         }
     }
 
     @include media-breakpoint-up(xl) {
         margin-bottom: 80px;
+
+        &__heading {
+            margin-bottom: 40px;
+        }
+
+        &__btn-wrp {
+            display: none;
+        }
     }
 
     @include media-breakpoint-up(xxl) {
         margin-bottom: 110px;
+
+        &__heading {
+            margin-bottom: 50px;
+        }
+
+        &__grid {
+            gap: 30px;
+        }
     }
 }
 
 /* section-partners-slider */
 
 .section-partners-slider {
-    margin-bottom: 50px;
+    margin-bottom: 60px;
+
+    &__heading {
+        max-width: 630px;
+        margin-bottom: 20px;
+    }
 
     @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
         margin-bottom: 80px;
+
+        &__heading {
+            margin-bottom: 40px;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 110px;
+
+        &__heading {
+            max-width: 780px;
+            margin-bottom: 50px;
+        }
     }
 }
 
 /* section-reviews-slider */
 
 .section-reviews-slider {
-    margin-bottom: 50px;
+    margin-bottom: 60px;
+
+    &__heading {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
 
     @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
     @include media-breakpoint-up(lg) {
+        &__heading {
+            margin-bottom: 20px;
+        }
+    }
+
+    @include media-breakpoint-up(xl) {
         margin-bottom: 80px;
+
+        &__heading {
+            margin-bottom: 40px;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 110px;
+
+        &__heading {
+            margin-bottom: 50px;
+        }
     }
 }
 
@@ -559,26 +670,91 @@
 .section-blog-slider {
     margin-bottom: 60px;
 
+    &__heading {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    &__btn-wrp {
+        margin-top: 15px;
+    }
+
     @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
     @include media-breakpoint-up(lg) {
+        &__heading {
+            margin-bottom: 20px;
+        }
+    }
+
+    @include media-breakpoint-up(xl) {
         margin-bottom: 40px;
+
+        &__heading {
+            margin-bottom: 40px;
+        }
+
+        &__btn-wrp {
+            display: none;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 50px;
+        
+        &__heading {
+            margin-bottom: 50px;
+        }
     }
 }
 
 /* section-faq-accordion */
 
 .section-faq-accordion {
-    margin-bottom: 50px;
+    margin-bottom: 60px;
+
+    &__heading {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    &__btn-wrp {
+        margin-top: 15px;
+    }
 
     @include media-breakpoint-up(md) {
         margin-bottom: 70px;
     }
 
     @include media-breakpoint-up(lg) {
+        &__heading {
+            margin-bottom: 20px;
+        }
+    }
+
+    @include media-breakpoint-up(xl) {
         margin-bottom: 80px;
+
+        &__heading {
+            margin-bottom: 40px;
+        }
+
+        &__btn-wrp {
+            display: none;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 110px;
+
+        &__heading {
+            margin-bottom: 50px;
+        }
     }
 }
 
@@ -605,14 +781,10 @@
         &:not(:last-of-type) {
             margin-bottom: 10px;
         }
-
-        @include media-breakpoint-up(lg) {
-            padding: 30px 40px;
-        }
     }
 
     .accordion-divider {
-        height: 10px;
+        height: 4px;
     }
 
     .accordion-button {
@@ -644,6 +816,7 @@
 
     .accordion-content {
         max-width: 820px;
+        font-size: var(--fs-small);
 
         a {
             text-decoration: underline;
@@ -657,4 +830,22 @@
             margin-bottom: 0;
         }
     }
+
+    @include media-breakpoint-up(sm) {
+        .accordion-content {
+            font-size: var(--bs-body-font-size);
+        }
+    }
+
+    @include media-breakpoint-up(xl) {
+        .accordion-item {
+            padding: 30px 40px;
+        }
+
+        .accordion-divider {
+            height: 10px;
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {}
 }
