--- a/src/scss/components/_swiper.scss
+++ b/src/scss/components/_swiper.scss
@@ -54,16 +54,39 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 216px;
-        height: 120px;
+        width: 163px;
+        height: 90px;
+        padding: 20px 30px;
         border-radius: var(--bs-border-radius);
         margin: 0 2px;
         background-color: var(--theme-blue-light);
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
         .swiper-img {
+            width: 216px;
+            height: 120px;
             margin: 0 10px;
+
+            img {
+                max-width: 100%;
+                width: auto;
+                height: auto;
+            }
+        }
+    }
+
+    @include media-breakpoint-up(xxl) {
+        .swiper-img {
+            width: 285px;
+            height: 160px;
+            margin: 0 15px;
         }
     }
 }
@@ -74,6 +97,14 @@
 
     .swiper-wrapper {
         padding-bottom: 60px;
+    }
+
+    .swiper-slide {
+        height: auto;
+    }
+
+    .card-review {
+        height: 100%;
     }
 }
 
