--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -100,6 +100,10 @@ h6,
     --bs-text-opacity: 0.6;
 }
 
+.lh-body {
+    line-height: var(--bs-body-line-height) !important;
+}
+
 // Paragraph
 
 p {
