--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body @@if (headerAbsolute) {class="header-absolute"}>
+<body class="@@if (headerAbsolute) {header-absolute}">
 
     <header class="header" id="site-header">
         <div class="container-fluid">
@@ -26,10 +26,10 @@
                 <nav class="header-row__navigation">
                     <ul class="primary-nav">
                         <li class="nav-item">
-                            <a href="#">Проекты</a>
+                            <a href="projects.html">Проекты</a>
                         </li>
                         <li class="nav-item has-mega-menu">
-                            <a href="#">Услуги</a>
+                            <a href="services.html">Услуги</a>
                         </li>
                         <li class="nav-item ">
                             <a href="#">Партнёры</a>
@@ -38,7 +38,7 @@
                             <a href="#">О нас</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#">Блог</a>
+                            <a href="blog.html">Блог</a>
                         </li>
                         <li class="nav-item">
                             <a href="#">Контакты</a>
