--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -6,6 +6,14 @@
 }
 
 /*------------------------------------------------------------------
+[ breadcrumb ]*/
+
+.breadcrumb {
+    --bs-breadcrumb-font-size: var(--fs-small);
+    --bs-breadcrumb-margin-bottom: 10px;
+}
+
+/*------------------------------------------------------------------
 [ home page ]*/
 
 /* section-home-hero */
@@ -846,6 +854,15 @@
             height: 10px;
         }
     }
+}
 
-    @include media-breakpoint-up(xxl) {}
+/*------------------------------------------------------------------
+[ services page ]*/
+
+/* services-list */
+
+.services-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
