--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -66,6 +66,10 @@ body {
 
 // margins
 
+.mt-15 {
+    margin-top: 15px !important;
+}
+
 .mb-10 {
     margin-bottom: 10px !important;
 }
@@ -86,31 +90,14 @@ body {
     margin-bottom: 60px !important;
 }
 
-.mt-15 {
-    margin-top: 15px !important;
-}
-
 // gaps
 
 .gap-10 {
     gap: 10px !important;
 }
 
-.gap-15 {
-    gap: 15px !important;
-}
-
 .gap-20 {
     gap: 20px !important;
-}
-
-.g-15 {
-    --bs-gutter-x: 15px;
-    --bs-gutter-y: 15px;
-}
-
-.gy-40 {
-    --bs-gutter-y: 40px;
 }
 
 // Максимальная ширина
@@ -124,6 +111,8 @@ body {
 // Минимальная ширина
 
 @include media-breakpoint-up(md) {
+    // margins
+
     .mb-md-20 {
         margin-bottom: 20px !important;
     }
@@ -135,33 +124,16 @@ body {
     .mb-md-70 {
         margin-bottom: 70px !important;
     }
-
-    .mt-md-20 {
-        margin-top: 20px !important;
-    }
-
-    .gap-md-20 {
-        gap: 20px !important;
-    }
-
-    .g-md-20 {
-        --bs-gutter-x: 20px;
-        --bs-gutter-y: 20px;
-    }
-
-    .gy-md-20 {
-        --bs-gutter-y: 20px;
-    }
 }
 
 @include media-breakpoint-up(xl) {
+    // paddings
+
     .p-xl-20 {
         padding: 20px !important;
     }
 
-    .p-xl-40 {
-        padding: 40px !important;
-    }
+    // margins
 
     .mb-xl-40 {
         margin-bottom: 40px !important;
@@ -174,20 +146,10 @@ body {
     .mb-xl-80 {
         margin-bottom: 80px !important;
     }
-
-    .mt-xl-40 {
-        margin-top: 40px !important;
-    }
-
-    .gy-xl-60 {
-        --bs-gutter-y: 60px;
-    }
 }
 
 @include media-breakpoint-up(xxl) {
-    .p-xxl-50 {
-        padding: 50px !important;
-    }
+    // margins
 
     .mb-xxl-30 {
         margin-bottom: 30px !important;
@@ -199,23 +161,6 @@ body {
 
     .mb-xxl-110 {
         margin-bottom: 110px !important;
-    }
-
-    .mt-xxl-50 {
-        margin-top: 50px !important;
-    }
-
-    .gap-xxl-30 {
-        gap: 30px !important;
-    }
-
-    .g-xxl-30 {
-        --bs-gutter-x: 30px;
-        --bs-gutter-y: 30px;
-    }
-
-    .gy-xxl-30 {
-        --bs-gutter-y: 30px;
     }
 }
 
