--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -3,10 +3,38 @@
 
 .section {
     position: relative;
+    margin-bottom: 60px;
+
+    @include media-breakpoint-up(md) {
+        margin-bottom: 70px;
+    }
+
+    @include media-breakpoint-up(xl) {
+        margin-bottom: 80px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-bottom: 110px;
+    }
 }
 
-/*------------------------------------------------------------------
-[ breadcrumb ]*/
+/* component: white-rounded-wrapper */
+
+.white-rounded-wrapper {
+    padding: 15px;
+    border-radius: var(--bs-border-radius-lg);
+    background-color: var(--bs-white);
+
+    @include media-breakpoint-up(xl) {
+        padding: 40px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        padding: 50px;
+    }
+}
+
+/* component: breadcrumb */
 
 .breadcrumb {
     --bs-breadcrumb-font-size: var(--fs-small);
@@ -21,6 +49,7 @@
 .section-home-hero {
     position: relative;
     padding-top: 81px;
+    margin: 0;
     background-color: #000;
 
     .container-fluid {
@@ -859,10 +888,92 @@
 /*------------------------------------------------------------------
 [ services page ]*/
 
-/* services-list */
+/* component: services-widgets-grid */
 
-.services-list {
+.services-widgets-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 40px;
+
+    @include media-breakpoint-up(xl) {
+        grid-template-columns: 1fr 1fr;
+        gap: 60px;
+    }
+}
+
+/* component: service-widget */
+
+.service-widget {
+    position: relative;
+
+    .services-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+}
+
+/*------------------------------------------------------------------
+[ blog page ]*/
+
+/* component: blog-cards-grid */
+
+.blog-cards-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+
+    @include media-breakpoint-up(md) {
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+
+    @include media-breakpoint-up(xl) {
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 30px;
+    }
+}
+
+/* component: show-more-wrapper */
+
+.show-more-wrapper {
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+    justify-content: center;
+    margin-top: 15px;
+
+    @include media-breakpoint-up(md) {
+        margin-top: 20px;
+    }
+
+    @include media-breakpoint-up(xl) {
+        margin-top: 40px;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        margin-top: 50px;
+    }
+}
+
+/*------------------------------------------------------------------
+[ projects page ]*/
+
+/* component: projects-cards-grid */
+
+.projects-cards-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+
+    @include media-breakpoint-up(md) {
+        gap: 20px;
+    }
+
+    @include media-breakpoint-up(xl) {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @include media-breakpoint-up(xxl) {
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
 }
