--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -84,7 +84,7 @@
         <!-- footer__main-bar -->
         <div class="footer__main-bar">
             <div class="container-fluid">
-                <div class="white-rounded-wrapper">
+                <div class="rounded-wrapper bg-white">
                     <div class="row row-cols-1 row-cols-lg-3">
 
                         <div class="col">
