--- a/src/scss/components/_general.scss
+++ b/src/scss/components/_general.scss
@@ -54,10 +54,18 @@ body {
     background-image: var(--theme-red-gradient);
 }
 
+.bg-blue-light {
+    background-color: var(--theme-blue-light) !important;
+}
+
 // paddings
 
 .p-15 {
     padding: 15px !important;
+}
+
+.pb-10 {
+    padding-bottom: 10px !important;
 }
 
 .pb-20 {
@@ -96,6 +104,10 @@ body {
     gap: 10px !important;
 }
 
+.gap-15 {
+    gap: 15px !important;
+}
+
 .gap-20 {
     gap: 20px !important;
 }
@@ -124,9 +136,19 @@ body {
     .mb-md-70 {
         margin-bottom: 70px !important;
     }
+
+    // gaps
+
+    .gap-md-20 {
+        gap: 20px !important;
+    }
 }
 
 @include media-breakpoint-up(xl) {
+    .grid-cols-xl-2 {
+        grid-template-columns: 1fr 1fr;
+    }
+
     // paddings
 
     .p-xl-20 {
@@ -134,6 +156,10 @@ body {
     }
 
     // margins
+
+    .mb-xl-20 {
+        margin-bottom: 20px !important;
+    }
 
     .mb-xl-40 {
         margin-bottom: 40px !important;
@@ -145,6 +171,16 @@ body {
 
     .mb-xl-80 {
         margin-bottom: 80px !important;
+    }
+
+    // gaps
+
+    .gap-xl-20 {
+        gap: 20px !important;
+    }
+
+    .gap-xl-30 {
+        gap: 30px !important;
     }
 }
 
@@ -161,6 +197,12 @@ body {
 
     .mb-xxl-110 {
         margin-bottom: 110px !important;
+    }
+
+    // gaps
+
+    .gap-xxl-30 {
+        gap: 30px !important;
     }
 }
 
