--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -18,12 +18,11 @@
     }
 }
 
-/* component: white-rounded-wrapper */
+/* component: rounded-wrapper */
 
-.white-rounded-wrapper {
+.rounded-wrapper {
     padding: 15px;
     border-radius: var(--bs-border-radius-lg);
-    background-color: var(--bs-white);
 
     @include media-breakpoint-up(xl) {
         padding: 40px;
@@ -37,8 +36,12 @@
 /* component: breadcrumb */
 
 .breadcrumb {
-    --bs-breadcrumb-font-size: var(--fs-small);
+    --bs-breadcrumb-font-size: var(--fs-x-small);
     --bs-breadcrumb-margin-bottom: 10px;
+
+    // @include media-breakpoint-up(xl) {
+    //     --bs-breadcrumb-font-size: var(--fs-small);
+    // }
 }
 
 /*------------------------------------------------------------------
@@ -951,6 +954,29 @@
 
     @include media-breakpoint-up(xxl) {
         margin-top: 50px;
+    }
+}
+
+/* component: author-avatar-big */
+
+.author-avatar-big {
+    width: 120px;
+    height: 120px;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    @include media-breakpoint-up(md) {
+        width: 80px;
+        height: 80px;
+    }
+
+    @include media-breakpoint-up(xl) {
+        width: 140px;
+        height: 140px;
     }
 }
 
